# xfce4-alarm-plugin

./: .gitignore  configure.ac.in
icons/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  alarm-dialog.c  alarm-dialog.glade  alarm-dialog.h  alarm-plugin.c  alarm-plugin.h  alarm.c  alarm.desktop.in  alarm.desktop.in.in  alarm.glade  alarm.h  alert-box.c  alert-box.glade  alert-box.h  alert.c  alert.h  common.c  common.h  plugin-configure-dialog.glade  properties-dialog.c  properties-dialog.glade  properties-dialog.h  sample.c
po/: POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ko.po  lt.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  (+7 more)
